/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */

package ucf.assignments;

public class AddList {
    public void add() {
        //create button bar within tilted pane
        //add the add button within button bar
        //add the remove button within button bar
        //add the edit description button within button bar
        //add the edit title button within button bar
        //add the edit date button within button bar
        //add the save button within button bar
        //add the show complete button within button bar
        //add the show incomplete button within button bar
        //add scroll bar
    }
}
