/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */

package ucf.assignments;

public class LoadList {
    public static void load() {
        /*
        declare file reader
        create an array of strings to hold all of what is in loaded file
        create new file
        fill what is in the array into the file
        close file reader
         */
    }
}
