/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */

package ucf.assignments;

public class RemoveList {
    public static void remove(String name) {
        /*
        int temp = -1
        while(user has not entered a correct name) {
            prompt the user to enter a name they wish to remove
            scan said name
            for(int i = 0; i < number of to do list names; i++) {
                check if name equals any of the names on the list
                temp = i
            }
            if(temp != -1)
                prompt the user to enter another name
            else
                break
        }
        remove name from list by using the temp variable
         */
    }
}
