/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */

package ucf.assignments;

public class SaveAllLists {
    public static void saveAll() {
        /*
        create file
        declare a file writer
        see if what they have written is new or edited info
        write new information into file if new
        write over old info with new info if edited
         */
    }
}
