/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */

package ucf.assignments;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Scene;
import javafx.stage.Stage;
import java.io.IOException;

public class ToDoApplication extends Application {

    @Override

    public void start(Stage stage) throws IOException {

    }

    public static void main(String[] args) {
        launch();
    }
}