/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Mary Brashear
 */


package ucf.assignments;

import javafx.fxml.FXML;
import javafx.scene.control.Label;

public class ToDoController {


    @FXML
    protected void AddButton() {
        //Create tilted pane in accordion
        //call add class
    }

    @FXML
    protected void RemoveButton() {
        //prompt user for name of list they would like to remove
        //call remove class
    }

    @FXML
    protected void SaveALlButton() {
        //call to save all class
    }

    @FXML
    protected void LoadButton() {
        //call load class
    }

    @FXML
    protected void AddToListButton() {
        //call to add in list class
    }

    @FXML
    protected void RemoveFromListButton() {
        //call to remove in list class
    }

    @FXML
    protected void EditDescButton() {
        //call to edit description in list class
    }

    @FXML
    protected void EditDateButton() {
        //call to edit date in list class
    }

    @FXML
    protected void EditTitleButton() {
        //call to edit title in list class
    }

    @FXML
    protected void SaveButton() {
        //call to save in list class
    }

    @FXML
    protected void CompletedButton() {
        //call to show complete in list class
    }

    @FXML
    protected void IncompletedButton() {
        //call to show incomplete in list class
    }

}



